Added label to approaches section

--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -1,4 +1,5 @@
 \section{Approaches}
+\label{sec:approaches}
 
 Before starting the actual implementation process, we first thought about
 different ways in which the Lanczos algorithm could be realized in the Apache
