Wrote intro to the implementations section

--- a/doc/paper/implementations.tex
+++ b/doc/paper/implementations.tex
@@ -3,3 +3,15 @@
 % Don't draw any conclusions!
 % - E.g. stop after saying that the "nested iterations" exception came up!
 % - Conclusions belong to the Results/Conclusion sections
+
+This section discusses our attempts at implementing the different approaches
+described in section \ref{sec:approaches}. While we won't go over every single
+line of our code, we will still give detailed insight into our implementations
+in this section.
+
+\subsection{Delta Iterations}
+
+\subsection{Exploiting Mahout's LanczosSolver}
+
+\subsection{Loop-Based Implementation}
+
