Added label to approaches section

--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -139,6 +139,7 @@ system.
 % ===================
 
 \subsection{Loop-Based Approach}
+\label{ssec:loop_approach}
 
 The approach that actually came to our minds first was to implement the Lanczos
 algorithm in a loop-based fashion, modeling data flow effectively the same way
