Added reference to Lanczos Wiki article

--- a/doc/paper/references.tex
+++ b/doc/paper/references.tex
@@ -15,5 +15,9 @@
 
 [4] Kostas Tzoumas: {\it Apache Flink Internals}. Presentation at the Apache
 Flink meetup Berlin on November 18, 2014.
-\url{http://de.slideshare.net/KostasTzoumas/flink-internals}. (Fetched on \today).
+\url{http://de.slideshare.net/KostasTzoumas/flink-internals}. (Fetched on
+\today).
+
+[5] The Wikimedia Foundation: {\it Lanczos Algorithm}. Wikipedia article.
+\url{https://en.wikipedia.org/wiki/Lanczos_algorithm}. (Fetched on \today).
 }
