--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{url}
+\usepackage{amsmath}
 \usepackage{tikz}
 \tikzset{add reference/.style={insert path={%
     coordinate [pos=0,xshift=-0.5\pgflinewidth,yshift=-0.5\pgflinewidth] (#1 south west) 
